--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -1,8 +1,7 @@
 on:
   workflow_dispatch:
   schedule:
-    # Run every hour, on the hour.
-    - cron:  '0 * * * *'
+  - cron: "0 13 * * *"
 
 name: Check for metadata json changes
 
@@ -29,6 +28,11 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release' # The R version to download (if necessary) and use.
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            censusapi
+            dplyr
       - run: Rscript -e 'print("hello")'
 
         # if: steps.cache.outputs.cache-hit != 'true'
