--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -25,28 +25,11 @@ jobs:
       - name: Run update-metadata.R
         run: Rscript scripts/update-metadata.R
 
-      # Compare the response to the previous run, using a hash of the response as the cache key
-      # - name: Compare cached endpoints.csv
-      #   id: cache
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: data/endpoints.csv
-      #     key: ${{ hashFiles('data/endpoints.csv') }}
-
-      # - name: If the cached CSV and new are identical, do nothing
-      #   if: steps.cache.outputs.cache-hit == 'true'
-      #   run: |
-      #     echo "endpoints.csv did not change"
-
-      # - name: If the cached CSV has changed, commit update
-      #   if: steps.cache.outputs.cache-hit != 'true'
-      #   run: |
-      #     echo "endpoints.csv changed"
-
+      # Commit or not based on env variable passed from R
       - name: If the cached CSV has not changed, do nothing
         if: "$UPDATED_DATA" == false
         run: |
-          echo "endpoints.csv changed: $UPDATED_DATA
+          echo "endpoints.csv changed:" $UPDATED_DATA
 
           # GITHUB_ENV var set in R script
           printf '%s\n' "$UPDATED_DATA"
@@ -54,7 +37,7 @@ jobs:
       - name: If the cached CSV has changed, commit update
         if: "$UPDATED_DATA" == true
         run: |
-          echo "endpoints.csv really changed"
+          echo "endpoints.csv changed:" $UPDATED_DATA
 
           # GITHUB_ENV var set in R script
           printf '%s\n' "$UPDATED_DATA"
