--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -26,8 +26,12 @@ jobs:
         run: Rscript scripts/update-metadata.R
 
       # Commit or not based on env variable passed from R
-      - run: echo "endpoints.csv changed:" $UPDATED_DATA
-      - run: echo "endpoints.csv changed:" env.UPDATED_DATA
+      - name: Print $UPDATED_DATA
+        run: echo "endpoints.csv changed:" $UPDATED_DATA
+
+      - name: If the cached CSV has not changed, finish
+        if: env.UPDATED_DATA == false
+        run: echo "no changes, nothing committed"
 
       - name: If the cached CSV has changed, commit update
         if: env.UPDATED_DATA == true
