--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -1,9 +1,10 @@
 on:
   workflow_dispatch:
   schedule:
+    # Run once per day
   - cron: "0 13 * * *"
 
-name: Check for metadata json changes
+name: Check for metadata changes
 
 jobs:
   check:
@@ -14,8 +15,6 @@ jobs:
     
       # Install R and dependencies
       - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: 'release' # The R version to download (if necessary) and use.
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages: |
@@ -42,6 +41,10 @@ jobs:
 
           # Commit files
           git add .
-          timestamp=$(TZ=:America/New_York date)
+
+          # Save diff
+          git diff data/endpoints.csv > data/endpoints-diff.txt
+
+          timestamp=$(TZ=:America/New_York date '+%Y-%m-%d %H:%M:%S')
           git commit -m "Update data ${timestamp}" || exit 0
           git push
