--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -48,13 +48,13 @@ jobs:
           timestamp=$(TZ=:America/New_York date '+%Y-%m-%d %H:%M')
 
       - name: Push minor changes update
-        if: env.UPDATED_DATA == 'true' & env.MAJOR_CHANGES == 'false'
+        if: (env.UPDATED_DATA == 'true' & env.MAJOR_CHANGES == 'false')
         run: |
           git commit -m "Minor data change ${timestamp}" || exit 0
           git push
 
       - name: Push major changes update
-        if: env.UPDATED_DATA == 'true' & env.MAJOR_CHANGES == 'true'
+        if: (env.UPDATED_DATA == 'true' & env.MAJOR_CHANGES == 'true')
         run: |
           git commit -m "Major data change ${timestamp}" || exit 0
           git push
