--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -41,15 +41,18 @@ jobs:
 
           # Commit files
           git add .
-
-      - name: Push minor changes update
+      - env: 
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        name: Push minor changes update
         if: env.UPDATED_DATA == 'true' && env.MAJOR_CHANGES == 'false'
         run: |
           timestamp=$(TZ=:America/New_York date '+%Y-%m-%d %H:%M')
           git commit -m "Minor data change ${timestamp}" || exit 0
           git push
 
-      - name: Push major changes update
+      - env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        name: Push major changes update
         if: env.UPDATED_DATA == 'true' && env.MAJOR_CHANGES == 'true'
         run: |
           timestamp=$(TZ=:America/New_York date '+%Y-%m-%d %H:%M')
