--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -4,13 +4,6 @@ on:
   push:
     branches: 'main'
   workflow_call:
-    inputs:
-      config-path:
-        required: true
-        type: string
-    secrets:
-      personal_access_token:
-        required: true
 
 jobs:
   build_site:
@@ -19,6 +12,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          repo-token: ${{ secrets.personal_access_token }}
 
       # If you're using pnpm, add this step then change the commands and cache key below to use `pnpm`
       # - name: Install pnpm
