--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -1,8 +1,10 @@
 name: Deploy to GitHub Pages
 
 on:
-  #push:
-  #  branches: 'main'
+  push:
+    branches: 'main'
+    paths:
+      - 'src/**'
   workflow_call:
 
 jobs:
