--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -24,7 +24,6 @@ jobs:
       - name: Run update-metadata.R
         run: |
           Rscript scripts/update-metadata.R
-          echo "endpoints.csv changed:" $UPDATED_DATA
 
       # Commit using message text prepared in R
       - name: Commit changes
@@ -44,8 +43,8 @@ jobs:
       # Otherwise it's happening too quickly to work
       - name: Pause
         run: |
-          sleep 60
-          echo "Pause before buildinng site"
+          sleep 120
+          echo "Pause before building site"
 
   build_site:
     needs: check_data
